5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1577_1559.log
== SUBMITION (2019-03-16 13:35:19) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.202813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:35:24) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:36:57) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia."upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia."upper())
                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:37:49) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia upper().")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia upper().
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:37:56) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia upper().")
-- EXECUTION TIME:
0.238113
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia upper().
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:38:00) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia upper().")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia upper().
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:42:42) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.211784
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:43:33) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.121505
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 3
    
                                                                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:43:36) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 3
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:43:44) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.178807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:43:47) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:44:53) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.177656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:44:57) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:45:14) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.124395
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:45:17) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:47:27) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(frase.upper)
-- EXECUTION TIME:
0.123294
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f0e4b81a4a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:47:29) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f80a4eb99f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:48:56) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovalace foi a primeira programadora da historia.upper")
-- EXECUTION TIME:
0.215807
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovalace foi a primeira programadora da historia.upper
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:49:04) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovalace foi a primeira programadora da historia.upper()")
-- OUTPUT:
Ada Lovalace foi a primeira programadora da historia.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:49:09) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovalace foi a primeira programadora da historia.upper()")
-- EXECUTION TIME:
0.153692
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovalace foi a primeira programadora da historia.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:49:22) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print("Ada Lovalace foi a primeira programadora da historia .upper()")
-- OUTPUT:
Ada Lovalace foi a primeira programadora da historia .upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:52:24) 
-- CODE:
frase = "Ada Lovalace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.172844
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVALACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:52:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.188134
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
